name: ruby-marshal
version: 0.1.3
synopsis: Parse a subset of Ruby objects serialised with Marshal.dump.
description: Parse a subset of Ruby objects serialised with Marshal.dump.
homepage: https://github.com/filib/ruby-marshal
license: MIT
license-file: LICENSE
author: Philip Cunningham
maintainer: hello@filib.io
category: Data
build-type: Simple
tested-with: GHC == 7.8, GHC == 7.10, GHC == 8.6.5
cabal-version: >= 1.10
extra-source-files: CHANGELOG.md

Source-repository head
  type: git
  location: https://github.com/filib/ruby-marshal

flag developer
  default: False

library
  hs-source-dirs:
    src
  build-depends:
      base        >= 4.7    && <= 5
    , cereal      >= 0.4.0  && <  0.6.0
    , bytestring  >= 0.9.0  && <= 0.12.0
    , containers  >= 0.5.0  && <= 0.7.0
    , string-conv >= 0.1    && <= 0.2
    , mtl         >= 2.1.0  && <= 2.3.0
    , vector      >= 0.10.0 && <  0.12.1
  default-language:
    Haskell2010
  exposed-modules:
      Data.Ruby.Marshal
    , Data.Ruby.Marshal.Encoding
    , Data.Ruby.Marshal.Get
    , Data.Ruby.Marshal.Int
    , Data.Ruby.Marshal.Monad
    , Data.Ruby.Marshal.RubyObject
    , Data.Ruby.Marshal.Types

test-suite spec
  ghc-options:
    -Wall
  hs-source-dirs:
    src, test
  build-depends:
      ruby-marshal -any
    , base
    , bytestring
    , cereal
    , containers
    , hspec
    , mtl
    , string-conv
    , vector
  default-language:
    Haskell2010
  other-modules:
    Data.Ruby.Marshal
    Data.Ruby.Marshal.Encoding
    Data.Ruby.Marshal.Get
    Data.Ruby.Marshal.Int
    Data.Ruby.Marshal.Monad
    Data.Ruby.Marshal.RubyObject
    Data.Ruby.Marshal.Types
    MarshalSpec
  main-is:
    Spec.hs
  type:
    exitcode-stdio-1.0
